added skill management APIs with user-skill mapping and validations