@@ -1,7 +1,10 @@
 package com.rutik.skill_sync_backend.skill.service;
 
+import com.rutik.skill_sync_backend.common.exception.BadRequestException;
+import com.rutik.skill_sync_backend.common.exception.ResourceNotFoundException;
 import com.rutik.skill_sync_backend.skill.dto.AddSkillRequestDTO;
 import com.rutik.skill_sync_backend.skill.dto.AddUserSkillRequestDTO;
+import com.rutik.skill_sync_backend.skill.dto.UserSkillRequestDTO;
 import com.rutik.skill_sync_backend.skill.dto.UserSkillResponseDTO;
 import com.rutik.skill_sync_backend.skill.entity.Skill;
 import com.rutik.skill_sync_backend.skill.entity.UserSkill;
@@ -12,63 +15,87 @@ import com.rutik.skill_sync_backend.skill.repository.UserSkillRepository;
 import com.rutik.skill_sync_backend.user.entity.User;
 import com.rutik.skill_sync_backend.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class SkillServiceImpl implements SkillService {
 
+    private final UserRepository userRepository;
     private final SkillRepository skillRepository;
     private final UserSkillRepository userSkillRepository;
-    private final UserRepository userRepository;
 
     @Override
-    public void addSkill(AddSkillRequestDTO request) {
+    public void addSkill(Long userId, UserSkillRequestDTO request) {
 
-        // Avoid duplicate skill names
-        skillRepository.findByName(request.getName())
-                .ifPresent(skill -> {
-                    throw new RuntimeException("Skill already exists");
+
+        log.info("➡️ addSkill called with userId: {} and request: {}", userId, request);
+
+        // 🔹 Fetch user
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> {
+                    log.error("❌ User not found with id: {}", userId);
+                    return new ResourceNotFoundException("User not found");
                 });
 
-        Skill skill = Skill.builder()
-                .name(request.getName())
-                .category(request.getCategory())
-                .build();
+        log.info("✅ User found: {}", user.getEmail());
 
-        skillRepository.save(skill);
-    }
-
-    @Override
-    public void addUserSkill(Long userId, AddUserSkillRequestDTO request) {
-
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
+        // 🔹 Fetch skill
         Skill skill = skillRepository.findById(request.getSkillId())
-                .orElseThrow(() -> new RuntimeException("Skill not found"));
+                .orElseThrow(() -> {
+                    log.error("❌ Skill not found with id: {}", request.getSkillId());
+                    return new ResourceNotFoundException("Skill not found");
+                });
 
-        SkillType type = SkillType.valueOf(request.getType());
-        SkillLevel level = SkillLevel.valueOf(request.getLevel());
+        log.info("✅ Skill found: {}", skill.getName());
 
-        // Prevent duplicate mapping
-        if (userSkillRepository.existsByUserIdAndSkillIdAndType(
-                userId, request.getSkillId(), type
-        )) {
-            throw new RuntimeException("Skill already added");
-        }
+        // 🔹 Check duplicate
+        userSkillRepository.findByUserIdAndSkillIdAndType(userId, skill.getId(), request.getType())
+                .ifPresent(us -> {
+                    log.error("❌ Duplicate skill detected for userId: {} skillId: {} type: {}",
+                            userId, skill.getId(), request.getType());
+                    throw new BadRequestException("Skill already added");
+                });
 
+        // 🔹 Create entity
         UserSkill userSkill = UserSkill.builder()
                 .user(user)
                 .skill(skill)
-                .type(type)
-                .level(level)
+                .type(request.getType())
+                .level(request.getLevel())
+                .isVisible(true) // ✅ FIX
                 .build();
 
+        log.info("💾 Saving UserSkill: {}", userSkill);
+
         userSkillRepository.save(userSkill);
+
+        log.info("✅ Skill successfully added for userId: {}", userId);
+    }
+
+
+    @Override
+    public void removeSkill(Long userId, Long skillId, SkillType type) {
+
+        log.info("➡️ Removing skill: userId={}, skillId={}, type={}", userId, skillId, type);
+
+        UserSkill userSkill = userSkillRepository
+                .findByUserIdAndSkillIdAndType(userId, skillId, type)
+                .orElseThrow(() -> {
+                    log.error("❌ UserSkill NOT FOUND");
+                    return new ResourceNotFoundException("User skill not found");
+                });
+
+        log.info("✅ Found UserSkill: {}", userSkill.getId());
+
+        userSkillRepository.delete(userSkill);
+
+        log.info("✅ Deleted successfully");
     }
 
     @Override
@@ -76,11 +103,27 @@ public class SkillServiceImpl implements SkillService {
 
         return userSkillRepository.findByUserId(userId)
                 .stream()
-                .map(us -> UserSkillResponseDTO.builder()
-                        .skillName(us.getSkill().getName())
-                        .type(us.getType().name())
-                        .level(us.getLevel().name())
-                        .build())
-                .collect(Collectors.toList());
+                .map(this::mapToDTO)
+                .toList();
     }
+
+    @Override
+    public List<UserSkillResponseDTO> getUserSkillsByType(Long userId, SkillType type) {
+
+        return userSkillRepository.findByUserIdAndType(userId, type)
+                .stream()
+                .map(this::mapToDTO)
+                .toList();
+    }
+
+    private UserSkillResponseDTO mapToDTO(UserSkill us) {
+        return UserSkillResponseDTO.builder()
+                .id(us.getId())
+                .skillId(us.getSkill().getId())
+                .skillName(us.getSkill().getName())
+                .type(us.getType())
+                .level(us.getLevel())
+                .build();
+    }
+
 }
